--- a/WebContent/css/element_style.css
+++ b/WebContent/css/element_style.css
@@ -47,3 +47,27 @@
 a:link,a:visited {color:#080808;text-decoration:none;}
 a:hover,a:active {color:#A0A0A0;text-decoration:none;} 
 
+.mycenter{
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 350px;
+    width:500px;
+    padding: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+.mycenter mysign{
+    width: 440px;
+}
+.mycenter input,checkbox,button{
+    margin-top:2%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.mycheckbox{
+    margin-top:10px;
+    margin-left: 40px;
+    margin-bottom: 10px;
+    height: 10px;
+}
